--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.4",
     "@fontsource/roboto": "^5.2.9",
+    "@netlify/angular-runtime": "^3.0.1",
     "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
