Dodanie pliku sitemap.xml oraz robots.txt

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,16 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "sitemap.xml",
+                "input": "src",
+                "output": "/"
+              },
+              {
+                "glob": "robots.txt",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": ["src/styles.css", "src/styles/index.scss"],
